--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <body>
 
-<img src="2952281650_d618aef0ba_b.jpg"
+<img src="Praia_dos_Três_Irmãos,_Portimão_(1)_.jpg"
 
 alt="A imagem é de uma praia"
 
-title=""computer desk" by houdini_cs is licensed under CC BY-SA 2.0."
+title="" Praia dos 3 Irmãos,(Three Brother's Beach) Portimão, Algarve, Portugal." by Juntas is licensed under CC BY-SA 3.0"
 
 class>
 
